<resources>
    <string name="app_name">IotClient</string>
    <string name="action_settings">Settings</string>
    <string name="txt_information">IotClient started...</string>
    <string name="btn_apply">Apply</string>
    <string name="btn_send">Send</string>
    <string name="cbx_accelerometer">Accelerometer</string>
    <string name="cbx_gyroscope">Gyroscope</string>
    <string name="cbx_magnetic_field">Magnetic Field</string>
    <string name="rbn_json">JSON</string>
    <string name="rbn_csv">CSV</string>
    <string name="rbn_speed_fastest">Fastest</string>
    <string name="rbn_speed_game">Game</string>
    <string name="rbn_speed_normal">Normal</string>
    <string name="rbn_speed_ui">UI</string>

</resources>
